--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,47 @@
 *{
     margin: 0px;
+    font-family: sans-serif;
 }
 
 
 /* header section start */
- .header-title{
 
+header{
+    
+    background-image: url(/images/banner/banner3.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding: 270px 0px;
+}
+.sec-header{
+    padding-right: 200px;
+}
+
+ .header-title{
+        text-align: right;
+        color: white;
+        font-size: 35px;
+        font-weight: 500px;
  }
  .header-discrip{
+    text-align: right;
+    font-size: 18px;
+    color: white;
+    margin: 30px 0px;
 
  }
  .header-btn{
-    
+    font-size: 18px;
+    font-weight: 400;
+    color: #1770AC;
+    background-color: white;
+    border: 0px;
+    padding: 15px 30px;
+    border-radius: 5px;
  }
-/* header section start */
+ .btn-right{
+    display: flex;
+    justify-content: right;
+ }
+ 
+/* header section end */
