about section setup

--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,22 @@ header{
  }
  
 /* header section end */
+/* ==========================================================
+============================================================= */
+/* about section start */
+
+.about-image{
+
+}
+.my-discrip{
+
+}
+.discrip-title{
+
+}
+.discrip-me{
+
+}
+.discrip-list{
+    
+}
