my plan section html compleate

--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,22 @@ header{
 /* about section end */
 /* ==============================================================
 ============================================================= */
+/* my plan section start */
+.plan-title{
+
+}
+.plans{
+
+}
+.web{
+
+}
+.js{
+
+}
+.smoking{
+
+}
+.ecommerce{
+    
+} 
