--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,33 @@ header{
 /* my plan section end */
 /* ==============================================================
 ============================================================= */
+/* mini banner start */
+
+.mini-banner{
+
+    background-image: url(/images/gradient1.png), url(/images/watch.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 8px;
+    padding: 50px 200px 50px ;
+    margin: 150px 250px;
+}
+.mbanner-title{
+    text-align: left;
+    color: white;
+    font-size: 35px;
+    font-weight: 500px;
+    margin-bottom: 30px;
+}
+.mbanner-btn{
+    font-size: 18px;
+    font-weight: 400;
+    color: #1770AC;
+    background-color: white;
+    border: 0px;
+    padding: 15px 30px;
+    border-radius: 5px;
+}
+/* mini banner section end */
+/* ==============================================================
+============================================================= */
