again fixed images and css link

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 header{
     
-    background-image: url(./images/banner/banner3.png);
+    background-image: url(../images/banner/banner3.png);
     background-repeat: no-repeat;
     background-size: contain;
     padding: 270px 0px;
@@ -130,7 +130,7 @@ header{
 
 .mini-banner{
 
-    background-image: linear-gradient(to right, rgba(23, 112, 172,100), rgba(0,0,0,0)60%), url(./images/watch.png);
+    background-image: linear-gradient(to right, rgba(23, 112, 172,100), rgba(0,0,0,0)60%), url(../images/watch.png);
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 8px;
