--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 *{
     margin: 0px;
     font-family: sans-serif;
+    
+}
+* a{
+    text-decoration: none;
+    color: white;
 }
 
 
@@ -194,3 +199,60 @@ header{
 /* get in touch section end */
 /* ==============================================================
 ============================================================= */
+/* footer start */
+.footer{
+    display: flex;
+    background-color: black;
+    padding: 150px 350px;
+}
+.footer-left{
+    margin-right: 100px;
+}
+.footer-title{
+    font-size: 45px;
+    color: white;
+}
+.footer-dicrip{
+    font-size: 20px;
+    color: white;
+    margin: 25px 200px 0px 0px;
+
+}
+.footer-contact{
+    font-size: 20px;
+    color: white;
+    margin: 25px 0px;
+    
+}
+.footer-social{
+    display: flex;
+    gap: 25px;
+}
+.footer-right{
+
+}
+.sub-title{
+    color: white;
+    font-size: 45px;
+
+}
+.sub-form{
+
+}
+.mail-box{
+    font-size: 18px;
+    padding: 20px 60px;
+    border: 0px;
+    margin: 15px 0px;
+    border-radius: 4px;
+
+}
+.sub-btn{
+        font-size: 20px;
+        font-weight: 500;
+        color: white;
+        background-color: #1770AC;
+        padding: 15px 20px;
+        border-radius: 4px;
+}
+/* footer end */
