copy right section

--- a/css/style.css
+++ b/css/style.css
@@ -256,3 +256,13 @@ header{
         border-radius: 4px;
 }
 /* footer end */
+
+.copy-right{
+    background-color: #1770AC;
+    color: white;
+    font-size: 12px;
+    font-weight: 300;
+    font-family: sans-serif;
+    text-align: center;
+    padding: 10px 0px;
+}
