--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ header{
     
     background-image: url(../images/banner/banner3.png);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     padding: 270px 0px;
 }
 .sec-header{
@@ -242,7 +242,9 @@ header{
 .mail-box{
     font-size: 18px;
     padding: 20px 60px;
-    border: 0px;
+    color: white;
+    border: 2px solid white;
+    background-color: black;
     margin: 15px 0px;
     border-radius: 4px;
 
